--- a/index.html
+++ b/index.html
@@ -4,8 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="login.css">
 </head>
 <body>
-    <h1>Hi</h1>
+        <div class="card">
+           <!-- <div>
+             <img src="../assets/profile.JPG"
+                  < alt="profile"
+             />
+            <h2>
+                Welcome to my Profile
+             </h2>
+             <p>
+                Please login to your account
+             </p>
+           <div style="display: flex; ">
+                <div class="input-group">
+                    <label>FirstName </label>
+                    <input placeholder="Firstname"/>
+                </div>
+                <div class="input-group">
+                    <label>SureName</label>
+                    <input placeholder="Surename"/>
+                </div>
+             </div>
+             </div> -->
+             <div class="input-group">
+                <label>
+                    Username
+                </label>
+                <input type="Text" placeholder="Enter username"/>
+             </div>
+             <div class="input-group">
+                <label>Password</label>
+                <input type="password" placeholder="Password"/>
+             </div>
+             <div class="forgot">
+             <a href="">
+                <p>Forgot password</p>
+             </a>
+             </div>
+             <div class="btn">
+                <a href="./ProDetail.html">
+                <button style="background-color:  rgb(28, 28, 80); border: none; color: hsl(0, 0%, 100%);">
+                    Login</button>
+                </a>
+             </div>
+             <div class="register">
+                <p>Don't have an account 
+                    <a href="">
+                        <span>
+                            <strong>Register</strong>
+                        </span>
+                    </a>
+                </p>
+             </div>
+        </div>
 </body>
 </html>
