Updated new file and change something

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 <label>
                     Username
                 </label>
-                <input type="Text" placeholder="Enter username"/>
+                <input type="Text" placeholder="admin"/>
              </div>
              <div class="input-group">
                 <label>Password</label>
-                <input type="password" placeholder="Password"/>
+                <input type="password" placeholder="123"/>
              </div>
              <div class="forgot">
              <a href="">
