add new file and edit something

--- a/ProDetail.html
+++ b/ProDetail.html
@@ -67,44 +67,61 @@
     </div>
     <div class="product-grid">
       <div class="product-card">
+        <a href="./ProDetailReshw15.html">
         <img
           src="https://thumbs.dreamstime.com/b/sunflower-terracotta-pot-isolated-transparent-background-357917874.jpg"
           alt="img"
         />
+        </a>
         <p class="text">Plant</p>
         <p class="text">$9.99</p>
         <button class="btn">Add to cart</button>
       </div>
 
       <div class="product-card">
+         <a href="./ProDetailReshw15.html">
         <img
           src="https://atlas-content-cdn.pixelsquid.com/stock-images/rhododendron-purple-flower-tree-POOD3yE-600.jpg"
           alt="img"
         />
+        </a>
         <p class="text">Plant</p>
         <p class="text">$9.99</p>
         <button class="btn">Add to cart</button>
       </div>
 
       <div class="product-card">
+         <a href="./ProDetailReshw15.html">
         <img
           src="https://atlas-content-cdn.pixelsquid.com/stock-images/lavender-mdaaPB4-600.jpg"
           alt="img"
         />
+        </a>
         <p class="text">Plant</p>
         <p class="text">$9.99</p>
         <button class="btn">Add to cart</button>
       </div>
       <div class="product-card">
+         <a href="./ProDetailReshw15.html">
         <img
           src="https://m.media-amazon.com/images/I/71qvWeopurL.jpg"
+          alt="img"
+        />
+         </a>
+        <p class="text">Plant</p>
+        <p class="text">$9.99</p>
+        <button class="btn">Add to cart</button>
+      </div>
+
+      <div class="product-card">
+        <img
+          src="https://thumbs.dreamstime.com/b/photo-green-tree-white-background-eucalyptus-isolated-d-render-285951664.jpg"
           alt="img"
         />
         <p class="text">Plant</p>
         <p class="text">$9.99</p>
         <button class="btn">Add to cart</button>
       </div>
-
       <div class="product-card">
         <img
           src="https://thumbs.dreamstime.com/b/photo-green-tree-white-background-eucalyptus-isolated-d-render-285951664.jpg"
@@ -158,6 +175,42 @@
       <div class="product-card">
         <img
           src="https://thumbs.dreamstime.com/b/orchid-flowerpot-white-background-purple-vector-illustration-73221929.jpg"
+          alt="img"
+        />
+        <p class="text">Plant</p>
+        <p class="text">$9.99</p>
+        <button class="btn">Add to cart</button>
+      </div>
+      <div class="product-card">
+        <img
+          src="https://thumbs.dreamstime.com/b/photo-green-tree-white-background-eucalyptus-isolated-d-render-285951664.jpg"
+          alt="img"
+        />
+        <p class="text">Plant</p>
+        <p class="text">$9.99</p>
+        <button class="btn">Add to cart</button>
+      </div>
+      <div class="product-card">
+        <img
+          src="https://thumbs.dreamstime.com/b/photo-green-tree-white-background-eucalyptus-isolated-d-render-285951664.jpg"
+          alt="img"
+        />
+        <p class="text">Plant</p>
+        <p class="text">$9.99</p>
+        <button class="btn">Add to cart</button>
+      </div>
+      <div class="product-card">
+        <img
+          src="https://thumbs.dreamstime.com/b/photo-green-tree-white-background-eucalyptus-isolated-d-render-285951664.jpg"
+          alt="img"
+        />
+        <p class="text">Plant</p>
+        <p class="text">$9.99</p>
+        <button class="btn">Add to cart</button>
+      </div>
+      <div class="product-card">
+        <img
+          src="https://thumbs.dreamstime.com/b/photo-green-tree-white-background-eucalyptus-isolated-d-render-285951664.jpg"
           alt="img"
         />
         <p class="text">Plant</p>
