update on login card and style

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 <p>Forgot password</p>
              </a>
              </div>
-             <div class="btn">
+             <div>
                 <a href="./ProDetail.html">
-                <button style="background-color:  rgb(28, 28, 80); border: none; color: hsl(0, 0%, 100%);">
+                <button class="btn">
                     Login</button>
                 </a>
              </div>
