--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
              </div>
              <div class="register">
                 <p>Don't have an account 
-                    <a href="">
+                    <a class="register" href="">
                         <span>
                             <strong>Register</strong>
                         </span>
