delete for test

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
              </div> -->
              <div class="input-group">
                 <label>
-                    Username
+                    Usernam
                 </label>
                 <input type="Text" placeholder="admin"/>
              </div>
