--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
              </div> -->
              <div class="input-group">
                 <label>
-                    Usernam
+                    Username
                 </label>
                 <input type="Text" placeholder="admin"/>
              </div>
